# Awimul

./: Awimul.pptx  README.md  settings.gradle
app/src/main/cpp/: CMakeLists.txt  Xlib.h  ipc.cpp  ipc.h  main_wm.cpp  main_wm.h  main_wm_c.c  main_wm_c.h  util.cpp  util.h  window_manager.cpp  window_manager.h  xlib2.h
app/src/main/cpp/GL/: gl.h  glx.h  glxext.h  glxproto.h  glxtokens.h  wglext.h
app/src/main/cpp/GL/internal/: dri_interface.h
app/src/main/cpp/cutils/: cutils_stub.cpp  properties.h
app/src/main/cpp/dri/: dd.h  dri.c  dri.h  dri_backend.c  dri_interface.h  dri_private.h  driinfo_gallium.h  errors.c  errors.h  format_info.h  winsys_handle.h
app/src/main/cpp/dri/st/: st.c  st.h
app/src/main/cpp/gl4es/: version.h
app/src/main/cpp/gl4es/gl/: arbconverter.c  arbhelper.h  attributes1.h  buffers.c  buffers.h  build_info.c  getter.c  gl4es.h  hint.c  init.c  list.h  logs.c  preproc.c  queries.c  queries.h  shader.h  stack.h  state.h  stubs.c
app/src/main/cpp/gl4es/glx/: gbm.c  glx.c  glx.h  glx_gbm.h  utils.h
app/src/main/cpp/gl4es/include/: gl4eshint.h  khash.h
app/src/main/cpp/glibc/: abi-versions.h  adaptive_spin_count.h  atomic-machine.h  atomic.h  dl-dtv.h  endian.h  hp-timing.h  list_t.h  shlib-compat.h  stackinfo.h  unwind-generic.h
app/src/main/cpp/glibc/arm/: dl-sysdep.h  stackinfo.h
app/src/main/cpp/glibc/string/: endian.h
app/src/main/cpp/im/: imCallbk.c  imDefFlt.c  imDefIc.c  imDefIm.c  imDefLkup.c  imDispch.c  imEvToWire.c  imExten.c  imImSw.c  imInsClbk.c  imInt.c  imLcFlt.c  imLcGIc.c  imLcIc.c  imLcIm.c  imLcLkup.c  imLcPrs.c  imLcSIc.c  imRm.c  imRmAttr.c  imThaiFlt.c  imThaiIc.c  imThaiIm.c  imTrX.c  imTrans.c  imTransR.c
app/src/main/cpp/impl/: errno.h  fattach.c  isastream.c  libc-symbols.h  mblen.c  open_memstream.c  open_memstream.h  shmem.c  smmintrin.h  stropts.h
app/src/main/cpp/impl/sys/: filio.h  shm.h
app/src/main/cpp/ipc/: features.h
app/src/main/cpp/ipc/bits/: ipc.h  ipctypes.h  predefs.h  types.h  typesizes.h  wordsize.h
app/src/main/cpp/ipc/gnu/: stubs-32.h  stubs-64.h  stubs.h
app/src/main/cpp/ipc/sys/: cdefs.h  ipc.h
app/src/main/cpp/libepoxy/: common.h  dispatch_common.c  dispatch_common.h  gl.h  gl_generated.h
app/src/main/cpp/libsha1/: libsha1.h  sha1.c
app/src/main/cpp/mesa/compiler/: builtin_type_macros.h  glsl_types.cpp  glsl_types.h  nir_types.cpp  nir_types.h  shader_enums.c  shader_enums.h  shader_info.h
app/src/main/cpp/mesa/glx/: indirect_size.c  (+5 more)
app/src/main/cpp/om/: omDefault.c  omGeneric.c  omImText.c  omText.c  omTextEsc.c  omTextExt.c  omTextPer.c  omXChar.c
app/src/main/cpp/os/: WaitFor.c  access.c  auth.c  backtrace.c  busfault.c  client.c  connection.c  inputthread.c  io.c  log.c  mitauth.c  oscolor.c  osdep.h  osinit.c  ospoll.c  ospoll.h  reallocarray.c  rpcauth.c  strcasecmp.c  strcasestr.c  strlcat.c  strlcpy.c  strndup.c  timingsafe_memcmp.c  utils.c  xdmauth.c  xdmcp.c  xprintf.c  xserver_poll.c  xsha1.c  xstrans.c
app/src/main/cpp/pixman/: pixman-access.c  pixman-accessor.h  pixman-arm.c  pixman-bits-image.c  pixman-combine-float.c  pixman-combine32.c  pixman-compiler.h  pixman-conical-gradient.c  pixman-edge-accessors.c  pixman-edge-imp.h  pixman-edge.c  pixman-fast-path.c  pixman-general.c  pixman-glyph.c  pixman-gradient-walker.c  pixman-image.c  pixman-implementation.c  pixman-inlines.h  pixman-linear-gradient.c  pixman-matrix.c  pixman-mips.c  pixman-noop.c  pixman-ppc.c  pixman-private.h  pixman-radial-gradient.c  pixman-region.c  pixman-region16.c  pixman-region32.c  pixman-solid-fill.c  pixman-trap.c  pixman-utils.c  pixman-version.h  pixman-x86.c  pixman.c  pixman.h
app/src/main/cpp/virgl/: config.h  iov.c  venus_hw.h  virgl_context.c  virgl_context.h  virgl_hw.h  virgl_protocol.h  virgl_resource.c  virgl_resource.h  virgl_util.c  virgl_util.h  virglrenderer.c  virglrenderer.h  virglrenderer_hw.h  vrend_blitter.c  vrend_blitter.h  vrend_debug.c  vrend_debug.h  vrend_iov.h  vrend_object.c  vrend_object.h  vrend_renderer.c  vrend_renderer.h  vrend_shader.c  vrend_shader.h  vrend_strbuf.h  vrend_tweaks.c  vrend_tweaks.h  vrend_winsys.c  vrend_winsys.h  vrend_winsys_gbm.c  vrend_winsys_gbm.h  vrend_winsys_glx.c  vrend_winsys_glx.h
app/src/main/cpp/windows/: basetsd.h  basetyps.h  guidDef.h  in6addr.h  poppack.h  pshpack2.h  pshpack4.h  pshpack8.h  types.h  windef.h  windows.h  windows2.h  winnt.h  winnt.rh  winsock2.h  ws2ipdef.h  ws2tcpip.h
app/src/main/cpp/x11/: AllCells.c  AllPlanes.c  Bell.c  Border.c  ChGC.c  ChProp.c  ChSaveSet.c  ChWAttrs.c  ChWindow.c  ChkIfEv.c  ChkTypEv.c  ChkTypWEv.c  ChkWinEv.c  CirWin.c  CirWinDn.c  CirWinUp.c  ClDisplay.c  Clear.c  ClearArea.c  ConfWind.c  Context.c  ConvSel.c  CopyArea.c  CopyGC.c  CopyPlane.c  Cr.h  CrBFData.c  CrCmap.c  CrCursor.c  CrGC.c  CrGlCur.c  CrPFBData.c  CrPixmap.c  CrWindow.c  Cursor.c  DefCursor.c  DelProp.c  Depths.c  DestWind.c  DisName.c  (+175 more)
app/src/main/cpp/xcalc/: actions.c  math.c  xcalc.c  xcalc.h
app/src/main/cpp/xcb/: bigreq.c  bigreq.h  xc_misc.c  xc_misc.h  xcb.h  xcb_auth.c  xcb_conn.c  xcb_ext.c  xcb_in.c  xcb_list.c  xcb_out.c  xcb_util.c  xcb_windefs.h  xcb_xid.c  xcbext.h  xcbint.h  xproto.c  xproto.h
app/src/main/cpp/xclock/: Clock.c  Clock.h  ClockP.h  xclock.c
app/src/main/cpp/xeyes/: Eyes.c  Eyes.h  EyesP.h  transform.c  transform.h  xeyes.c
app/src/main/cpp/xkbcomp/: action.c  action.h  alias.c  alias.h  compat.c  compat.h  expr.c  expr.h  geometry.c  indicators.c  indicators.h  keycodes.c  keycodes.h  keymap.c  keytypes.c  listing.c  misc.c  misc.h  parseutils.c  parseutils.h  symbols.c  tokens.h  utils.c  utils.h  vmod.c  vmod.h  xkbcomp.c  xkbcomp.h  xkbparse.c  xkbpath.c  xkbpath.h  xkbscan.c
app/src/main/cpp/zlib/: adler32.c  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  gencrc32.c  genfixed.c  gentrees.c  gzclose.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffast.h  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
app/src/main/cpp/zstd/: zstd.h  zstd_errors.h
(+2413 files in other folders)
